--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    implementation 'com.google.firebase:firebase-firestore:22.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
